DuPont DevSB/src/objects/External_Initiative_Company__c.object
<CustomObject>
    <description>Accounts related to an External Initiative.</description>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Role__c</fullName>
        <description>Account&apos;s role in the External Initiative.</description>
        <label>Account Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Construction Manager</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineer</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Mechanical Engineer</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Initiative Companies</relationshipLabel>
        <relationshipName>External_Initiative_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Initiative__c</fullName>
        <label>External Initiative</label>
        <referenceTo>External_Initiative__c</referenceTo>
        <relationshipLabel>External Initiative Companies</relationshipLabel>
        <relationshipName>External_Initiative_Companies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External Initiative Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Initiative Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Initiative Companies</pluralLabel>
    <recordTypes>
        <fullName>BI_NA_External_Initiative_Company</fullName>
        <active>true</active>
        <label>BI-NA External Initiative Company</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>